src/test/deca/codegen/invalid/DivZeroFlot.deca
// Description:
//    Erreur du 11.1 : Division flottante par zéro
//
// Resultats:
// Error: overflow_error

{
    float res = 1.0 / 0.0;
}
